@@ -1,5 +1,12 @@
 {{$NEXT}}
 
+- Change Specio constraint object's stringification overloading to return the
+  type name rather than the default Perl object stringification, which gives
+  you something like
+  "Specio::Constraint::Parameterized=HASH(0x564d258efb48)". Anonymous are
+  special cased to return something you can print.
+
+
 0.46     2020-03-14
 
 - No code changes, just fixing a mistake in the POD. Reported by Petr
